WebKit Bugzilla
New
Browse
Search+
Log In
×
Sign in with GitHub
or
Remember my login
Create Account
·
Forgot Password
Forgotten password account recovery
RESOLVED FIXED
200825
LocalStorageDatabaseTracker does not need to subclass ThreadSafeRefCounted
https://bugs.webkit.org/show_bug.cgi?id=200825
Summary
LocalStorageDatabaseTracker does not need to subclass ThreadSafeRefCounted
Chris Dumez
Reported
2019-08-16 13:10:58 PDT
LocalStorageDatabaseTracker does not need to subclass ThreadSafeRefCounted, it is always ref'd / deref'd from the com.apple.WebKit.WebStorage serial WorkQueue.
Attachments
Patch
(1.84 KB, patch)
2019-08-16 13:12 PDT
,
Chris Dumez
no flags
Details
Formatted Diff
Diff
Patch
(7.67 KB, patch)
2019-08-16 13:58 PDT
,
Chris Dumez
no flags
Details
Formatted Diff
Diff
Show Obsolete
(1)
View All
Add attachment
proposed patch, testcase, etc.
Chris Dumez
Comment 1
2019-08-16 13:12:05 PDT
Created
attachment 376525
[details]
Patch
Chris Dumez
Comment 2
2019-08-16 13:58:11 PDT
Created
attachment 376535
[details]
Patch
WebKit Commit Bot
Comment 3
2019-08-16 18:04:59 PDT
Comment on
attachment 376535
[details]
Patch Clearing flags on attachment: 376535 Committed
r248808
: <
https://trac.webkit.org/changeset/248808
>
WebKit Commit Bot
Comment 4
2019-08-16 18:05:01 PDT
All reviewed patches have been landed. Closing bug.
Radar WebKit Bug Importer
Comment 5
2019-08-16 18:05:18 PDT
<
rdar://problem/54415760
>
Note
You need to
log in
before you can comment on or make changes to this bug.
Top of Page
Format For Printing
XML
Clone This Bug